--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -5,9 +5,8 @@
 # https://github.com/actions/stale
 name: Mark stale issues and pull requests
 
-on:
-  schedule:
-  - cron: '00 0 * * *'
+on: push
+
 
 jobs:
   my-job:
