--- a/package.json
+++ b/package.json
@@ -19,6 +19,6 @@
   },
   "homepage": "https://github.com/hzbnb/Li-love-robot#readme",
   "dependencies": {
-    "axios": "^1.1.2"
+    "axios": "1.1.2"
   }
 }
